# EA-License-Token-Dumper

./: .gitignore  LICENSE  README.md  build.bat  ps2exe.ps1  sha256.txt  token_dumper.ps1
native/: CMakeLists.txt  build_native.bat
native/src/: TokenDumper-ask_user.cpp  TokenDumper.cpp
src/: token_dumper.ps1
